# gssproxy

./: .gitignore  BUILD.txt  Makefile.am  NOTES  README  README.md  STYLE.txt  conf_macros.m4  configure.ac  gss-proxy.x  gss.x  gss_proxy.x  version.m4
.github/workflows/: ci.yaml  coverity.yml
contrib/: gssproxy.spec.in
docs/: Apache.md  Behavior  KRB5_TRACE.md  NFS.md  ProtocolDocumentation.md  README.md  ReleaseProcess.md  Userproxy.md  network_fs_clients.md
docs/Releases/: README.md  v0.1.0.md  v0.1.2.md  v0.2.1.md  v0.5.1.md  v0.7.0.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.8.3.md  v0.8.4.md
examples/: 80-httpd.conf.in  99-network-fs-clients.conf.in  99-nfs-client.conf.in  gssproxy.conf.in
man/: Makefile.am  gssproxy-mech.8.xml.in  gssproxy.8.xml  gssproxy.conf.5.xml
proxy/: BUILD.txt  COPYING  Makefile.am  conf_macros.m4  configure.ac  version.m4
proxy/contrib/: gssproxy.spec.in
proxy/docs/: Apache.md  NFS.md  ProtocolDocumentation.md  ReleaseProcess.md
proxy/docs/Releases/: v0.2.0.md  v0.2.2.md  v0.2.3.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.6.2.md
proxy/examples/: 80-httpd.conf.in  gssproxy-example.conf  gssproxy.conf.in  mech.in
proxy/man/: gssproxy-mech.8.xml  gssproxy-mech.8.xml.in  gssproxy.8.xml  gssproxy.conf.5.xml
proxy/po/: README
proxy/rpcgen/: README  gp_rpc.h  gp_rpc_xdr.c  gp_xdr.c  gp_xdr.h  gss_proxy.h  gss_proxy_xdr.c
proxy/src/: gp_common.c  gp_common.h  gp_config.c  gp_config.h  gp_config_dinglibs.c  gp_config_dinglibs.h  gp_config_iniparser.h  gp_conv.c  gp_conv.h  gp_creds.c  gp_creds.h  gp_debug.c  gp_debug.h  gp_export.c  gp_export.h  gp_init.c  gp_log.c  gp_log.h  gp_proxy.h  gp_rpc_accept_sec_context.c  gp_rpc_acquire_cred.c  gp_rpc_creds.h  gp_rpc_debug.h  gp_rpc_get_mic.c  gp_rpc_import_and_canon_name.c  gp_rpc_indicate_mechs.c  gp_rpc_init_sec_context.c  gp_rpc_process.c  gp_rpc_process.h  gp_rpc_release_handle.c  gp_rpc_unwrap.c  gp_rpc_verify_mic.c  gp_rpc_wrap.c  gp_rpc_wrap_size_limit.c  gp_selinux.h  gp_socket.c  gp_util.c  gp_utils.h  gp_workers.c  gssproxy.c
proxy/src/client/: gpm_accept_sec_context.c  gpm_acquire_cred.c  gpm_common.c  gpm_display_status.c  gpm_get_mic.c  gpm_import_and_canon_name.c  gpm_indicate_mechs.c  gpm_init_sec_context.c  gpm_release_handle.c  gpm_unwrap.c  gpm_verify_mic.c  gpm_wrap.c  gpm_wrap_size_limit.c  gssapi_gpm.h
proxy/src/mechglue/: README  gpm_accept_sec_context.c  gpm_acquire_cred.c  gpm_display_status.c  gpm_import_and_canon_name.c  gpm_indicate_mechs.c  gpm_init_sec_context.c  gpp_accept_sec_context.c  gpp_acquire_cred.c  gpp_context.c  gpp_creds.c  gpp_display_status.c  gpp_import_and_canon_name.c  gpp_indicate_mechs.c  gpp_init_sec_context.c  gpp_misc.c  gss_plugin.c  gss_plugin.h  gssapi_gpm.h
proxy/systemd/: gssproxy.service  gssproxy.service.in
proxy/tests/: Makefile.am  accept_context.c  cli_srv_comm.c  interposetest.c  runtests.py  t_accept.c  t_acquire.c  t_acquire.py  t_basic.py  t_cred_store.py  t_impersonate.c  t_impersonate.py  t_init.c  t_interpose.py  t_multi_key.py  t_reloading.py  t_setcredopt.c  t_utils.c  t_utils.h  testlib.py
proxy/tests/scripts/: dlopen.sh
rpcgen/: README  gp_xdr.c  gp_xdr.h  gss_proxy.h  gss_proxy_xdr.c
src/: extract_ccache.c  gp_common.h  gp_config.c  gp_config.h  gp_config_dinglibs.c  gp_config_dinglibs.h  gp_config_iniparser.c  gp_config_iniparser.h  gp_conv.c  gp_conv.h  gp_creds.c  gp_creds.h  gp_debug.c  gp_debug.h  gp_export.c  gp_export.h  gp_init.c  gp_log.c  gp_log.h  gp_mgmt.c  gp_proxy.h  gp_ring_buffer.h  gp_rpc_accept_sec_context.c  gp_rpc_acquire_cred.c  gp_rpc_creds.h  gp_rpc_debug.c  gp_rpc_get_mic.c  gp_rpc_import_and_canon_name.c  gp_rpc_indicate_mechs.c  gp_rpc_init_sec_context.c  gp_rpc_process.c  gp_rpc_process.h  gp_rpc_release_handle.c  gp_rpc_unwrap.c  gp_rpc_verify_mic.c  gp_rpc_wrap.c  gp_rpc_wrap_size_limit.c  gp_selinux.h  gp_socket.c  gp_util.c  (+3 more)
src/client/: gpm_accept_sec_context.c  gpm_acquire_cred.c  gpm_common.c  gpm_display_status.c  gpm_get_mic.c  gpm_import_and_canon_name.c  gpm_indicate_mechs.c  gpm_init_sec_context.c  gpm_inquire_context.c  gpm_release_handle.c  gpm_unwrap.c  gpm_verify_mic.c  gpm_wrap.c  gpm_wrap_size_limit.c  gssapi_gpm.h
src/mechglue/: gpm_accept_sec_context.c  gpm_common.c  gpm_display_status.c  gpm_import_and_canon_name.c  gpm_indicate_mechs.c  gpm_init_sec_context.c  gpm_release_handle.c  gpp_accept_sec_context.c  gpp_acquire_cred.c  gpp_context.c  gpp_creds.c  gpp_display_status.c  gpp_import_and_canon_name.c  gpp_indicate_mechs.c  gpp_init_sec_context.c  gpp_misc.c  gpp_priv_integ.c  gss_plugin.c  gss_plugin.h  gssapi_gpm.h
systemd/: gssproxy.service.in  gssuserproxy.service.in  gssuserproxy.socket.in
tests/: Makefile.am  accept_context.c  cli_srv_comm.c  interposetest.c  runtests.py  t_accept.c  t_acquire.c  t_acquire.py  t_basic.py  t_cred_store.c  t_cred_store.py  t_impersonate.c  t_impersonate.py  t_init.c  t_interpose.py  t_multi_key.py  t_names.c  t_names.py  t_program.py  t_reloading.py  t_setcredopt.c  t_setcredopt.py  t_utils.c  t_utils.h  testlib.py  userproxytest.c
tests/scripts/: dlopen.sh
x-files/: gp_rpc.x  gss_proxy.x
